// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package fuzzilli.protobuf;

// If types are sent frequently (e.g. when they are collected at runtime
// and associated with a program), this might need a deduplication
// mechanism similar to the one for Operations.
message Type {
    uint32 definiteType = 1;
    uint32 possibleType = 2;
    repeated string properties = 3;
    repeated string methods = 4;
    string group = 5;
    FunctionSignature signature = 6;
}

message FunctionSignature {
    repeated Type inputTypes = 1;
    Type outputType = 2;
}
